[package]
name = "arcx"
version = "0.3.1"
edition = "2021"
description = "A compressed archive format with instant file retrieval"
license = "Apache-2.0"
repository = "https://github.com/getarcx/arcx"
readme = "README.md"
keywords = ["archive", "compression", "zstd", "selective-extraction"]
categories = ["command-line-utilities", "compression", "filesystem"]

[[bin]]
name = "arcx"
path = "src/main.rs"

[features]
default = []
fuse = ["dep:fuser", "dep:libc"]

[dependencies]
clap = { version = "4", features = ["derive"] }
zstd = "0.13"
memmap2 = "0.9"
sha2 = "0.10"
anyhow = "1"
hex = "0.4"
walkdir = "2"
crc32fast = "1"
ureq = "2"
fuser = { version = "0.14", optional = true }
libc = { version = "0.2", optional = true }
